@@ -2,6 +2,16 @@
 
 	* international/characters.el: Undo unwanted and unexplained change.
 
+2007-10-10  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el: Fix the usage of :foreground and :background face
+	attributes.  Reported by Nikolaj Schumacher <n_schumacher@web.de>.
+	(ps-print-version): New version 6.7.6.
+	(ps-face-attributes, ps-face-attribute-list, ps-face-background): Fix
+	code.
+	(ps-face-foreground-color-p, ps-face-background-color-p)
+	(ps-face-color-p): New inline funs.
+
 2007-10-10  Carsten Dominik  <dominik@science.uva.nl>
 
 	* org.el (org-additional-option-like-keywords): New constant.
